# ECN_S9_MCIA_ANN_lab

./: .gitignore  CMakeLists.txt  README.md
include/: images.hpp  labels.hpp  layer.hpp  main.hpp  network.hpp  parser.h
script/: main.py
src/: images.cpp  labels.cpp  layer.cpp  main.cpp  network.cpp  parser.c
